@@ -267,9 +267,8 @@ class SpecialTypesCase(TestCase):
 
 
 
-def test_main():
+def test_main(debug = 0):
     from guppy.heapy.Remote import off; off()
-    debug = 0
     support.run_unittest(FirstCase, debug)
     support.run_unittest(GCCase, debug)
     support.run_unittest(AltHeapCase, debug)
